<resources>
    <string name="app_name">EVAssist</string>

    <string name="nav_menu_label_guides">Guides</string>
    <string name="nav_menu_label_charging">Charging</string>
    <string name="nav_menu_label_news">News</string>
    <string name="nav_menu_label_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guide_fragment">Hello guide fragment</string>
    <string name="guide_todays_tips">Today\'s Tips</string>
    <string name="guide_charging">Charging</string>
    <string name="guide_batteryrange">Battery &amp; Range</string>
    <string name="guide_vehicle">Vehicle Specific Guides</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>