<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardBackgroundColor="@color/material_dynamic_secondary20">

        <LinearLayout
            android:layout_width="415dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_todays_tips"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="@color/material_dynamic_primary100"
                android:textSize="34sp" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:translationY="100dp"
        app:cardBackgroundColor="@color/material_dynamic_secondary20">

        <LinearLayout
            android:layout_width="415dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_charging"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="@color/material_dynamic_primary100"
                android:textSize="34sp" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:translationY="200dp"
        app:cardBackgroundColor="@color/material_dynamic_secondary20">

        <LinearLayout
            android:layout_width="415dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_batteryrange"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="@color/material_dynamic_primary100"
                android:textSize="34sp" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:translationY="300dp"
        app:cardBackgroundColor="@color/material_dynamic_secondary20">

        <LinearLayout
            android:layout_width="415dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_vehicle"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="@color/material_dynamic_primary100"
                android:textSize="34sp" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>